hphp/hack/test/typecheck/like_types/dynamic_coercion/like_not_subtype.php.exp
File "like_not_subtype.php", line 8, characters 15-20:
Invalid return type (Typing[4110])
File "like_not_subtype.php", line 8, characters 27-29:
This is an int
File "like_not_subtype.php", line 8, characters 15-20:
It is incompatible with a string
